[update]PHP変換タスク #14

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,7 +9,7 @@ $containerSize: 1200; // コンテンツ幅
 $containerPadding: 16; // コンテンツ余白
 
 // 画像パス
-$imgPath: "/_assets/img/";
+$imgPath: "/wp/wp-content/themes/my-theme/_assets/img/";
 
 // フォント
 $baseFont: "Noto Sans JP", "NotoSansJP", "Noto Sans Japanese", sans-serif;
