--- a/src/pages/wp/wp-content/themes/my-theme/front-page.astro
+++ b/src/pages/wp/wp-content/themes/my-theme/front-page.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
+import Template from "@/layouts/Template.astro";
 import SampleHero from "@/pages/_parts/_top/_sample.astro";
 import "@/scss/pages/_top.scss";
 
@@ -47,10 +48,9 @@ const page = {
   },
 };
 
-const imgPath =
-  "/wp/wp-content/themes/my-theme/_assets/img/" + page.head.slug + "/";
+const imgPath = "/_assets/img/" + page.head.slug + "/";
 ---
 
-<Layout page={page.head}>
+<Template>
   <SampleHero contents={page.contents.sample} imgPath={imgPath} />
-</Layout>
+</Template>
