--- a/src/scss/pages/_top.scss
+++ b/src/scss/pages/_top.scss
@@ -7,6 +7,7 @@
   align-items: center;
   min-height: 100vh;
   background: linear-gradient(135deg, rgb(0 0 255 / 0.1) 0%, rgb(255 0 255 / 0.1) 100%);
+  // background: url($imgPath + "top/sample.png");
 
   h1 {
     color: $color-prime;
