[update]サンプル追加

--- a/src/components/LowerTitle.astro
+++ b/src/components/LowerTitle.astro
@@ -12,7 +12,7 @@ interface Props {
 const { title } = Astro.props;
 ---
 
-<div class="bg-highlight">
+<div class="bg-prime">
   <div class="contentInner">
     <h1 class="c_ttl_lower">{title}</h1>
   </div>
