--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -29,7 +29,7 @@ const { bread } = Astro.props;
 const isLastItem = (index: number): boolean => index === bread.length - 1;
 ---
 
-<div class="mb-40">
+<div class="my-20">
   <div class="contentInner">
     <nav id="breadcrumbs">
       <ol
