--- a/src/scss/components/_c_navi.scss
+++ b/src/scss/components/_c_navi.scss
@@ -214,9 +214,12 @@
     > span {
       position: absolute;
       inset: 0;
+      width: spSize(18);
+      height: 0.2rem;
       margin: auto;
       color: inherit;
       text-indent: -999rem;
+      background-color: currentcolor;
       transition: background-color $easing;
 
       &::before,
@@ -224,7 +227,7 @@
         position: absolute;
         inset: 0;
         display: block;
-        width: spSize(18);
+        width: 100%;
         height: 0.2rem;
         margin: auto;
         content: "";
@@ -235,15 +238,13 @@
       }
 
       &::before {
-        top: spSize(16.5);
-        right: spSize(3);
+        top: spSize(6);
         bottom: auto;
       }
 
       &::after {
         top: auto;
-        bottom: spSize(16.5);
-        left: spSize(3);
+        bottom: spSize(6);
       }
     }
   }
@@ -312,15 +313,16 @@
       color: $color-reversal;
 
       span {
+        background-color: transparent;
+
         &::before,
         &::after {
           inset: 0;
-          rotate: 20deg;
-          transition: rotate $easing;
+          rotate: 40deg;
         }
 
         &::after {
-          rotate: -20deg;
+          rotate: -40deg;
         }
       }
     }
