--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -35,7 +35,7 @@ $color-body: #fff;
 $color-txt: #334155;
 $color-reversal: #fff;
 $color-gray: #d6d4d0;
-$color-prime: #3b82f6;
+$color-prime: #1d4ed8; // WCAG AA準拠（コントラスト比 4.5:1以上）
 $color-second: #8b5cf6;
 $color-third: #00f;
 
