--- a/src/scss/pages/_sample.scss
+++ b/src/scss/pages/_sample.scss
@@ -204,6 +204,7 @@
   .category_child_item {
     padding: 1.2rem 1.6rem;
     font-size: 1.4rem;
+    color: $color-txt;
     list-style: none;
     background: #fff;
     border-radius: 0.6rem;
