--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -182,4 +182,8 @@ const {
     </noscript>
   )}
     <JsonLd site={site} page={page} event={event} />
+    <link rel="preload"
+      as="image"
+      href="/_assets/img/sample/sample_001.png.webp"
+      type="image/webp">
 </head>
