[update]データ共通化

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 import SampleHero from "@/pages/_parts/_top/_content.astro";
 import "@/scss/pages/_top.scss";
 
-const page = {
+export const page = {
   head: {
     slug: "top",
     ttl: "サンプルページ",
