--- a/src/scss/components/_c_navi.scss
+++ b/src/scss/components/_c_navi.scss
@@ -311,6 +311,7 @@
     }
 
     li {
+      /* stylelint-disable-next-line no-descending-specificity */
       a {
         display: block;
         padding: 1.2rem 0 1.2rem 1.6rem;
